syntax = "proto3";

package greet;

service Greeter {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc SendMessage(stream ChatMessageRequest) returns (stream ChatMessageResponse);
    rpc ReceiveMessages(ChatClient) returns (stream ChatMessage);
}

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string message = 1;
}

message ChatMessageRequest {
    uint64 thread_id = 1;
    string message = 2;
    int64 timestamp = 3;
    uint64 sender = 4;
    uint64 receiver = 5;
}

message ChatMessage {
    uint64 id = 1;
    uint64 thread_id = 2;
    string message = 3;
    int64 timestamp = 4;
    uint64 sender = 5;
    uint64 receiver = 6;
}
message ChatMessageResponse {
    uint64 id = 1;
}
message ChatClient {
    uint64 receiver = 1;
}